--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storybook/angular",
-  "version": "3.2.0-alpha.7",
+  "version": "3.3.0-alpha.0",
   "description": "Storybook for Anglar: Develop Angular Components in isolation with Hot Reloading.",
   "homepage": "https://github.com/storybooks/storybook/tree/master/apps/angular",
   "bugs": {
@@ -9,9 +9,9 @@
   "license": "MIT",
   "main": "dist/client/index.js",
   "bin": {
-    "build-storybook": "./dist/server/build.js",
-    "start-storybook": "./dist/server/index.js",
-    "storybook-server": "./dist/server/index.js"
+    "build-storybook": "./bin/build.js",
+    "start-storybook": "./bin/index.js",
+    "storybook-server": "./bin/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,23 +19,23 @@
   },
   "scripts": {
     "dev": "DEV_BUILD=1 nodemon -e js,ts --watch ./src --exec 'npm run prepublish'",
-    "prepublish": "node ../../scripts/prepublish.js"
+    "prepare": "node ../../scripts/prepare.js"
   },
   "dependencies": {
-    "@angular/common": "^5.0.0-beta.3",
-    "@angular/compiler": "^5.0.0-beta.3",
-    "@angular/core": "^5.0.0-beta.3",
-    "@angular/platform-browser": "^5.0.0-beta.3",
-    "@angular/platform-browser-dynamic": "^5.0.0-beta.3",
-    "@storybook/addon-actions": "^3.2.0-alpha.7",
-    "@storybook/addon-links": "^3.2.0-alpha.5",
-    "@storybook/addons": "^3.1.6",
-    "@storybook/channel-postmessage": "^3.1.6",
-    "@storybook/ui": "^3.2.0-alpha.7",
+    "@angular/common": "^5.0.0-beta.7",
+    "@angular/compiler": "^5.0.0-beta.7",
+    "@angular/core": "^5.0.0-beta.7",
+    "@angular/platform-browser": "^5.0.0-beta.7",
+    "@angular/platform-browser-dynamic": "^5.0.0-beta.7",
+    "@storybook/addon-actions": "^3.3.0-alpha.0",
+    "@storybook/addon-links": "^3.3.0-alpha.0",
+    "@storybook/addons": "^3.3.0-alpha.0",
+    "@storybook/channel-postmessage": "^3.3.0-alpha.0",
+    "@storybook/ui": "^3.3.0-alpha.0",
     "airbnb-js-shims": "^1.1.1",
     "angular2-template-loader": "^0.6.2",
     "autoprefixer": "^7.1.1",
-    "babel-core": "^6.25.0",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.0.0",
     "babel-plugin-react-docgen": "^1.6.0",
     "babel-preset-env": "^1.6.0",
@@ -44,8 +44,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "case-sensitive-paths-webpack-plugin": "^2.0.0",
-    "chalk": "^2.0.1",
-    "commander": "^2.9.0",
+    "chalk": "^2.1.0",
+    "commander": "^2.11.0",
     "common-tags": "^1.4.0",
     "configstore": "^3.1.0",
     "core-js": "^2.4.1",
@@ -54,6 +54,7 @@
     "file-loader": "^0.11.1",
     "find-cache-dir": "^1.0.0",
     "global": "^4.3.2",
+    "html-webpack-plugin": "^2.30.1",
     "json-loader": "^0.5.4",
     "json-stringify-safe": "^5.0.1",
     "json5": "^0.5.1",
@@ -65,7 +66,7 @@
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-modal": "^1.7.7",
+    "react-modal": "^2.2.4",
     "redux": "^3.6.0",
     "request": "^2.81.0",
     "rxjs": "^5.4.2",
@@ -82,12 +83,12 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
+    "babel-cli": "^6.26.0",
     "babel-plugin-transform-decorators": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "codelyzer": "^3.1.2",
     "mock-fs": "^4.3.0",
-    "nodemon": "^1.11.0",
+    "nodemon": "^1.12.0",
     "typescript": "^2.4.0"
   }
 }
