--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@storybook/angular",
   "version": "3.3.0-alpha.0",
-  "description": "Storybook for Anglar: Develop Angular Components in isolation with Hot Reloading.",
-  "homepage": "https://github.com/storybooks/storybook/tree/master/apps/angular",
+  "description":
+    "Storybook for Anglar: Develop Angular Components in isolation with Hot Reloading.",
+  "homepage":
+    "https://github.com/storybooks/storybook/tree/master/apps/angular",
   "bugs": {
     "url": "https://github.com/storybooks/storybook/issues"
   },
@@ -18,8 +20,8 @@
     "url": "https://github.com/storybooks/storybook.git"
   },
   "scripts": {
-    "dev": "DEV_BUILD=1 nodemon -e js,ts --watch ./src --exec 'npm run prepublish'",
-    "prepare": "node ../../scripts/prepare.js"
+    "dev":
+      "DEV_BUILD=1 nodemon -e js,ts --watch ./src --exec 'npm run prepublish'"
   },
   "dependencies": {
     "@angular/common": "^5.0.0-beta.7",
